# Varco

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  speed_multithreaded.txt  speed_res.txt  speed_threadpool.txt
TestData/: SimpleFile.cpp  config_template.hpp
Win32Tests/TestClientArea/: TestClientArea.vcxproj
cmake/: FindSevenZip.cmake
src/: init.cpp
src/Control/: DocumentManager.cpp  DocumentManager.hpp
src/Document/: Document.cpp  Document.hpp
src/Lexers/: CPPLexer.cpp  CPPLexer.hpp  Lexer.cpp  Lexer.hpp
src/UI/: TabCtrl.cpp  TabCtrl.hpp  UICtrlBase.cpp  UICtrlBase.hpp  UIElement.cpp  UIElement.hpp
src/UI/CodeEditCtrl/: CodeEditCtrl.cpp  CodeEditCtrl.hpp
src/UI/CodeView/: CodeView.cpp  CodeView.hpp
src/UI/ScrollBar/: ScrollBar.cpp  ScrollBar.hpp
src/UI/TabBar/: TabBar.cpp  TabBar.hpp
src/UI/TabCtrl/: TabCtrl.cpp  TabCtrl.hpp
src/Utils/: Commons.hpp  Concurrent.hpp  Interpolators.hpp  Utils.hpp  VKeyCodes.hpp  WGL.cpp  WGL.hpp
src/WindowHandling/: BaseOSWindow_Linux.cpp  BaseOSWindow_Linux.hpp  BaseOSWindow_Win.cpp  BaseOSWindow_Win.hpp  MainWindow.cpp  MainWindow.hpp
